tests/paczka2/big_fuzzy/37455833.err
Error in line 4: BRYBiO A549 97,48
Error in line 1: BRYBiO A549 70,9
Error in line 9: A664 A569 4,8
Error in line 19: dHO9lsjKZI A664 52,7
Error in line 34: A664 A549 18,8
Error in line 40: 3elV7 A549 47,6
Error in line 46: dHO9lsjKZI A798 10,6
Error in line 47: BRYBiO A664 51,1
Error in line 54: SqchXg6dM A569 19,2
Error in line 59: A664 A56A 34,8
Error in line 56: A664 A664 96,5
Error in line 60: SqchXg6dM A549 9,3
Error in line 44: X2N8R A664 204,3
Error in line 75: A664{A664{180,6
Error in line 66: A664 A664 37,7
Error in line 81: X2N8R A569 52,9
Error in line 85: X2N8R A549 8,2
Error in line 95: B9sTh A549 54,6
Error in line 99: dHO9lsjKZI A569 34,4
Error in line 90: X2N8R A664 97,8
Error in line 105: A664 A798 70,2
Error in line 111: B9sTh A798 46,9
Error in line 113: BRYBiO A569 37,2
Error in line 123: BRYBiO A569 59,5
Error in line 125: BRYBiO A798 75,4
Error in line 131: BRYBiO A569 6,5
Error in line 116: X2N8R A569 101,4
Error in line 118: 3elV7 A798 211,0
Error in line 138: BRYBiO AVV4 21,8
Error in line 140: BRYBiO A664 36,4
Error in line 148: A664 A569 0,0
Error in line 146: B9sTh A569 194,9
Error in line 149: A664 A549 54,6
Error in line 144: BRYBiO A798 9,5
Error in line 187: BRYBiO A569 5,0
Error in line 177: SqchXg6dM A798 1,5
Error in line 188: BRYBiO A798 65,6
Error in line 197: A664 A664 29,1
Error in line 212: BRYBiO A569 1,7
Error in line 200: A664 A798 7,4
Error in line 211: dHO9lsjKZI A569 27,7
Error in line 217: A664 A569 4,3
Error in line 231: X2N8R A664 40,40
Error in line 239: BRYBiO A798 74,3
Error in line 241: A664 A798 3,5
